frontend-b.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: frontend-b
spec:
  selector:
    name: frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  type: NodePort
