frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  tls:
  - hosts:
    - app.cloudshaykh.com
    secretName: frontend-tls
  rules:
  - host: app.cloudshaykh.com
    http:
      paths:
      - backend:
          service:
            name: frontend-b
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
